# donkeycarGT

./: .clang-format  CMakeLists.txt  README.md
app/: main.cpp
docker/: Dockerfile.donkeycarGT  build-image.sh  run-image.sh
include/: event.h  lock.hpp  locked-map.hpp  managed-task-status.h  managed-thread.h  memory.hpp  mutex.h  vehicle.h
include/parts/: camera.h  camera.hpp  image-consumer.h  image-list-camera.h  image.h  interpreter.h  interpreter.hpp  keras.hpp  line-follower.h  network.hpp  part-io.h  part.h  part.hpp  web-camera.h
src/: event.cpp  managed-task-status.cpp  managed-thread.cpp  mutex.cpp  vehicle.cpp
src/parts/: camera.cpp  image-consumer.cpp  image-list-camera.cpp  image.cpp  interpreter.cpp  line-follower.cpp  part.cpp  web-camera.cpp
tests/: CMakeLists.txt  test-event.cpp  test-locked-map.cpp  test-managed-task-status.cpp  test-managed-thread.cpp  test-part.cpp
